--- a/css/style.css
+++ b/css/style.css
@@ -1617,27 +1617,10 @@ input[type=checkbox] {
     height: auto;
   }
 
-  .items.show .lSSlideOuter {
-    height: 70vh;
+  .items.show div#omeka-lightgallery {
+    min-height: 50vh;
     width: calc(100% + 42px);
     margin: 0 -21px;
-  }
-
-  .lSSlideWrapper,
-.lSSlideWrapper .lSFade {
-    position: static;
-  }
-
-  .lSSlideWrapper, .lSSlideWrapper .lSFade > * {
-    height: calc(100% - 42px) !important;
-  }
-
-  ul#itemfiles {
-    padding-bottom: 0 !important;
-  }
-
-  .lSSlideOuter .lSPager.lSGallery {
-    height: 42px;
   }
 
   /* @end */
